fix image overflow.

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -32,6 +32,11 @@ h1 {
     font-weight: 700;
 }
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 p,
 a {
     font-size: 2rem;
@@ -41,7 +46,7 @@ a {
     display: grid;
     grid-template-columns: auto 40vw;
     column-gap: 2rem;
-    align-items: start;
+    align-items: center;
 }
 
 .education {
@@ -85,6 +90,10 @@ a {
     position: relative;
     top: -2rem;
     right: -1rem;
+}
+
+.minecraft {
+    height: 100vh;
 }
 
 .questions {
